--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -15,6 +15,9 @@
         android:name="com.greenchat.fragment.LoginFragment"
         android:label="Login" />
 
-
+    <fragment
+        android:id="@+id/nav_main"
+        android:name= "com.greenchat.fragment.MainFragment"
+        android:label="Main" />
 
 </navigation>
