--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -20,4 +20,9 @@
         android:name= "com.greenchat.fragment.MainFragment"
         android:label="Main" />
 
+    <fragment
+        android:id="@+id/nav_message"
+        android:name= "com.greenchat.fragment.MessageFragment"
+        android:label="Message" />
+
 </navigation>
